leaflet lasso functionallity with javascript

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,9 @@
               "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/leaflet-lasso.js"
+            ]
           },
           "configurations": {
             "production": {
