--- a/angular.json
+++ b/angular.json
@@ -39,9 +39,7 @@
               "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss"
             ],
-            "scripts": [
-              "src/assets/leaflet-lasso.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
